# pyrion

./: .gitignore  API_REFERENCE.md  README.md  TODO.md  api-index.txt  core_abstractions.txt  core_principles.txt  demo.ipynb  environment.yaml  pypi_upload.sh  pyproject.toml  run_all_tests.sh  setup.py  setup_dev.py  test_runner.py  todo.txt
pyrion/: __init__.py  _version.py  config.py  core_types.py  visualization.py
pyrion/core/: amino_acid_auxiliary.py  amino_acid_sequences.py  canonizer.py  codons.py  fai.py  genes.py  genes_auxiliary.py  genome_alignment.py  genome_alignment_auxiliary.py  intervals.py  nucleotide_sequences.py  sequences_auxiliary.py  translation.py
pyrion/io/: chain.py  fasta.py  gene_data.py  genepred.py  gtf.py  twobit.py
pyrion/ops/: chain_serialization.py  chains.py  data_consistency.py  entity_ops.py  genes.py  interval_collection_ops.py  interval_ops.py  interval_slicing.py  intervals.py  sequence_serialization.py  transcript_serialization.py  transcript_slicing.py
pyrion/utils/: encoding.py
scripts/: generate_api_docs.py  update_version.py
test_data/bed/: hg38.tRNAs.bed  mm10.tRNAs.bed
test_data/fasta/: ARF5.fasta.fai
test_data/gtf/: sample_gencode.gtf  sample_gencode.ucsc.bed
test_outputs/: hg38.tRNAs.bed12  mm10.tRNAs.bed12
tests/: __init__.py  conftest.py  test_fasta_io.py  test_gtf_bed_equivalence.py
